--- a/easy_pubuliu-master-m/fuild.less
+++ b/easy_pubuliu-master-m/fuild.less
@@ -16,7 +16,8 @@ li{
 ul{
     position: relative;
     li{
-        width: 49%;
+        width: 30%;
+        min-height: 50px;
         float: left;
         border: 1px solid red;
         img{
